// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentButtonCommon Should renders button with custom width 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-rjcf26-MuiButtonBase-root-MuiButton-root"
  style="width: 200px; height: 40px; margin: 0px 10px;"
  tabindex="0"
  type="submit"
>
  Click me!
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`ComponentButtonCommon Should renders button with text 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-rjcf26-MuiButtonBase-root-MuiButton-root"
  style="width: 100%; height: 40px; margin: 0px 10px;"
  tabindex="0"
  type="submit"
>
  Click me!
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;
